--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "antd": "^5.25.3",
     "next": "14.0.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "@supabase/supabase-js": "^2.39.6"
   },
   "devDependencies": {
     "eslint": "^8",
