--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.50.0",
     "antd": "^5.25.3",
     "next": "14.0.3",
     "react": "^18",
-    "react-dom": "^18",
-    "@supabase/supabase-js": "^2.39.6"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "eslint": "^8",
